Feat: add improvement wave 1
